--- a/styles.css
+++ b/styles.css
@@ -23,16 +23,18 @@ body {
   border-radius: 4px;
   color: #333;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 18px;
   padding: 50px 50px;
   transition: background-color 0.3s ease;
   margin: 20px;
   width: 200px;
+  
 }
 
 @media (max-width: 768px) {
   .keypad-button {
-    font-size: 14px;
+    font-size: 18px;
     padding: 8px 12px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
